[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Remi Zaidan <zaidanri@skysoft-atm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2023.10.3"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
